# app/Http/Requests/Review/ReviewDateRequest.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Requests\Review;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ReviewDateRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'score' => 'required|integer|min:-2|max:1',
+            'id' => 'required|integer',
+        ];
+    }
+}
